compiler/tests/success/subarrays/x86-64/io.jazz
export fn main (reg ptr u64[10] r, reg u64 i) -> reg u64 {
  reg ptr u64[9] r9;
  reg ptr u64[4] r8;
  reg ptr u64[7] r7;
  reg ptr u64[6] r6;
  reg ptr u64[5] r5;
  reg ptr u64[4] r4;
  reg ptr u64[3] r3;
  reg ptr u64[2] r2;
  reg ptr u64[1] r1;
  stack u64[10] s;
  s[0] = 0;

  r = s;

  r9 = r[i:9];
  r8 = r9[1:4];
  r7 = r8[i:7];
  r6 = r7[i:6];
  r5 = r6[i:5];
  r4 = r5[i:4];
  r3 = r4[i:3];
  r2 = r3[i:2];
  r1 = r2[i:1];

  r1[0] = 0;

  reg u64 res;
  res = r1[0];

  r8 = r9[5:4];
  r7 = r8[i:7];
  r6 = r7[i:6];
  r5 = r6[i:5];
  r4 = r5[i:4];
  r3 = r4[i:3];
  r2 = r3[i:2];
  r1 = r2[i:1];

  r1[0] = 0;
  res += r1[0];

  return res;
}
