compiler/tests/fail/register_allocation/x86-64/no_more_register.jazz
export fn main () -> reg u64 {
  reg u64 r1, r2, r3, r4, r5, r6, r7, r8, r9, r10, r11, r12, r13, r14, r15, r16, res;

  r1 = 0;
  r2 = 1;
  r3 = 2;
  r4 = 3;
  r5 = 4;
  r6 = 5;
  r7 = 6;
  r8 = 1;
  r9 = 1;
  r10 = 1;
  r11 = 1;
  r12 = 1;
  r13 = 1;
  r14 = 1;
  r15 = 1;
  if (r1 > 4) { r16 = 5; }

  res = r1;
  res += r2;
  res += r3;
  res += r4;
  res += r5;
  res += r6;
  res += r7;
  res += r8;
  res += r9;
  res += r10;
  res += r11;
  res += r12;
  res += r13;
  res += r14;
  res += r15;
  res += r16;

  return res;
}
